# flychain

./: .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  final.md  models.yaml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
apps/cli/: README.md  package.json  tsconfig.json
apps/cli/src/: index.test.ts  index.ts
apps/cli/src/commands/: bootstrap.ts  init.test.ts  init.ts  instrument.test.ts  instrument.ts
apps/cli/src/lib/: config.ts  detect.test.ts  detect.ts  discover.ts
apps/dashboard/: Dockerfile  README.md  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/dashboard/public/: .gitkeep
apps/dashboard/src/app/: layout.tsx  page.test.tsx  page.tsx  workspace-client.tsx
apps/dashboard/src/app/api/capabilities/: route.ts
apps/dashboard/src/app/capabilities/[id]/: controls.test.tsx  controls.tsx  page.tsx
apps/dashboard/src/app/capabilities/new/: client.tsx  page.tsx
apps/dashboard/src/app/chat/: client.test.tsx  client.tsx  page.tsx
apps/dashboard/src/app/settings/: client.test.tsx  client.tsx  page.tsx
apps/dashboard/src/app/traces/: page.tsx
apps/dashboard/src/lib/: gateway.test.ts  gateway.ts
apps/gateway/: Dockerfile  README.md  pyproject.toml
apps/gateway/src/flychain_gateway/: __init__.py  autopilot_store.py  capability_store.py  cluster_store.py  config.py  failure_review_store.py  job_store.py  main.py  models_registry.py  otel.py  replay_store.py  schemas.py  served_validation.py  settings_store.py  trace_store.py  training_store.py
apps/gateway/src/flychain_gateway/providers/: __init__.py  anthropic.py  base.py  openai_compat.py  registry.py
apps/gateway/tests/: test_ab_compare.py  test_autopilot.py  test_capabilities.py  test_cluster_endpoints.py  test_eval.py  test_gateway.py  test_guided_actions.py  test_jobs.py  test_observability.py  test_served_validation.py  test_training_runs.py
apps/orchestrator/: Dockerfile  README.md  pyproject.toml
apps/orchestrator/src/flychain_orchestrator/: __init__.py  config.py  eval_client.py  worker.py
apps/orchestrator/tests/: test_worker.py
capabilities/templates/: README.md  code-correctness.yaml  groundedness.yaml  instruction-following.yaml  multi-step-reasoning.yaml  uncertainty-calibration.yaml
docs/architecture/: README.md  capability-flywheel.md  dashboard-cli-sdks.md  gateway.md  persistence-and-config.md  roadmap.md  system-overview.md
docs/e2e/: phase1-real-stack-2026-05-03.md  phase1-real-stack-runbook.md  phase2-real-stack-2026-05-03.md  phase3-real-stack-2026-05-04.md  phase4-real-stack-2026-05-04.md  project-readiness-2026-05-04.md
evals/judge-prompts/: README.md
evals/judge-prompts/code-correctness/: behavior_matches_spec.md  no_unreachable_or_dead.md  parses_and_compiles.md
evals/judge-prompts/groundedness/: all_claims_supported.md  appropriate_refusal.md  no_hallucination.md
evals/judge-prompts/instruction-following/: constraint_coverage.md  format_compliance.md  no_extra_fields.md
evals/judge-prompts/multi-step-reasoning/: answer_is_correct.md  conclusion_follows_from_chain.md  steps_are_consistent.md
evals/judge-prompts/uncertainty-calibration/: confident_when_correct.md  hedges_when_uncertain.md  no_overclaiming.md
infra/clickhouse/init/: 001_schema.sql
recipes/: README.md  sft-mlx-lora-local-3b.yaml
(+7 files in other folders)
