[project]
name = "flychain-gateway"
version = "0.0.0"
description = "FlyChain gateway: OpenAI/Anthropic-compatible proxy with OTel traces"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "clickhouse-connect>=0.8.0",
    "asyncpg>=0.29.0",
    "orjson>=3.10.7",
    "python-ulid>=3.0.0",
    "pyyaml>=6.0.2",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flychain_gateway"]

[tool.hatch.metadata]
allow-direct-references = true
