[project]
name = "flychain-orchestrator"
version = "0.0.0"
description = "FlyChain orchestrator: arq workers for eval, clustering, dataset synth, training, and the promotion gate"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "arq>=0.26.1",
    "redis>=5.0.8",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "clickhouse-connect>=0.8.0",
    "asyncpg>=0.29.0",
    "orjson>=3.10.7",
    "python-ulid>=3.0.0",
    "pyyaml>=6.0.2",
    "numpy>=2.1.1",
    "flychain-capability-compiler",
    "flychain-gateway",
]

[tool.uv.sources]
flychain-capability-compiler = { workspace = true }
flychain-gateway = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flychain_orchestrator"]

[tool.hatch.metadata]
allow-direct-references = true
